--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
 		"dotenv": "^8.2.0",
 		"express": "~4.16.1",
 		"express-session": "^1.17.0",
+		"handlebars-extend-block": "^1.0.0",
 		"hbs": "~4.0.4",
 		"http-errors": "~1.6.3",
 		"mongoose": "^5.9.2",
