--- a/package.json
+++ b/package.json
@@ -9,16 +9,13 @@
 	},
 	"dependencies": {
 		"bcrypt": "^4.0.1",
-		"connect-flash": "^0.1.1",
 		"connect-mongo": "^3.2.0",
 		"cookie-parser": "~1.4.4",
+		"cors": "^2.8.5",
 		"debug": "~2.6.9",
 		"dotenv": "^8.2.0",
 		"express": "~4.16.1",
 		"express-session": "^1.17.0",
-		"handlebars-extend-block": "^1.0.0",
-		"hbs": "~4.0.4",
-		"http-errors": "~1.6.3",
 		"mongoose": "^5.9.2",
 		"morgan": "~1.9.1"
 	},
